# JEJU-ROS-autonomous-vehicle

./: README.md
devel/include/erp42_msgs/: CANFeedBack.h  CmdControl.h  DriveCmd.h  ModeCmd.h  SerialFeedBack.h
devel/include/lidar_interfaces/: ObjectInfo.h
devel/include/object_detector/: objectDetectorConfig.h
devel/include/safety_supervisor/: PredictedPathParametersConfig.h  SafetySupervisorParametersConfig.h
devel/include/ublox_msgs/: Ack.h  AidALM.h  AidEPH.h  AidHUI.h  CfgANT.h  CfgCFG.h  CfgDAT.h  CfgDGNSS.h  CfgGNSS.h  CfgGNSS_Block.h  CfgHNR.h  CfgINF.h  CfgINF_Block.h  CfgMSG.h  CfgNAV5.h  CfgNAVX5.h  CfgNMEA.h  CfgNMEA6.h  CfgNMEA7.h  CfgPRT.h  CfgRATE.h  CfgRST.h  CfgSBAS.h  CfgTMODE3.h  CfgUSB.h  EsfALG.h  EsfINS.h  EsfMEAS.h  EsfRAW.h  EsfRAW_Block.h  EsfSTATUS.h  EsfSTATUS_Sens.h  HnrPVT.h  Inf.h  MgaGAL.h  MonGNSS.h  MonHW.h  MonHW6.h  MonVER.h  MonVER_Extension.h  (+40 more)
devel/include/vision_pkg/: VisionConfig.h
devel/include/xsens_mti_driver/: XsStatusWord.h
devel/lib/behavior_planner/: behavior_planner_node
devel/lib/ntrip/: ntrip_node
devel/lib/object_detector/: object_detector
devel/lib/pkgconfig/: behavior_planner.pc  cam.pc  erp42_msgs.pc  gps_bringup.pc  lidar_interfaces.pc  lidar_stack_bringup.pc  ntrip.pc  ntrip_client.pc  object_detector.pc  pure_pursuit.pc  rddf_recorder.pc  rplidar_ros.pc  rrt_path.pc  safety_supervisor.pc  stier_bringup.pc  ublox_gps.pc  ublox_msg_filters.pc  ublox_msgs.pc  ublox_serialization.pc  ublox_utils.pc  utm_lla.pc  velodyne_driver.pc  velodyne_laserscan.pc  velodyne_msgs.pc  velodyne_pcl.pc  velodyne_pointcloud.pc  vision_pkg.pc  xsens_mti_driver.pc
devel/lib/pure_pursuit/: pure_pursuit_node  steer_filter.py
devel/lib/rddf_recorder/: rddf_recorder
devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
devel/lib/safety_supervisor/: predicted_path_visualizer.py
devel/lib/ublox_gps/: ublox_logger
devel/lib/ublox_msg_filters/: example
devel/lib/ublox_utils/: ublox2nmea
devel/lib/utm_lla/: utm_lla_converter
devel/lib/velodyne_driver/: velodyne_node
devel/lib/velodyne_laserscan/: velodyne_laserscan_node
devel/lib/velodyne_pointcloud/: transform_node
devel/lib/vision_pkg/: main.py
devel/lib/xsens_mti_driver/: xsens_mti_node
devel/share/behavior_planner/cmake/: behavior_plannerConfig.cmake
devel/share/cam/cmake/: camConfig.cmake
devel/share/erp42_msgs/cmake/: erp42_msgs-msg-extras.cmake  erp42_msgs-msg-paths.cmake  erp42_msgsConfig.cmake
devel/share/gps_bringup/cmake/: gps_bringupConfig.cmake
devel/share/lidar_interfaces/cmake/: lidar_interfaces-msg-paths.cmake  lidar_interfacesConfig.cmake
devel/share/lidar_stack_bringup/cmake/: lidar_stack_bringupConfig.cmake
devel/share/ntrip/cmake/: ntripConfig.cmake
devel/share/ntrip_client/cmake/: ntrip_clientConfig.cmake
devel/share/object_detector/cmake/: object_detectorConfig.cmake
devel/share/object_detector/docs/: objectDetectorConfig-usage.dox  objectDetectorConfig.dox  objectDetectorConfig.wikidoc
devel/share/pure_pursuit/cmake/: pure_pursuitConfig.cmake
devel/share/rddf_recorder/cmake/: rddf_recorderConfig.cmake
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
src/control_pkg/behavior_planner/: CMakeLists.txt
src/control_pkg/behavior_planner/config/: params.yaml
src/control_pkg/behavior_planner/include/behavior_planner/: behavior_planner_node.h  path_manager.h  traffic_manager.h
src/control_pkg/behavior_planner/src/: behavior_planner_node.cpp  main.cpp  path_manager.cpp  traffic_manager.cpp
src/control_pkg/pure_pursuit/: CMakeLists.txt
src/control_pkg/pure_pursuit/include/pure_pursuit/: pure_pursuit.h  pure_pursuit_node.h
src/control_pkg/pure_pursuit/scripts/: steer_filter.py
src/control_pkg/pure_pursuit/src/: main.cpp  pure_pursuit.cpp  pure_pursuit_node.cpp
src/control_pkg/rddf_recorder/: CMakeLists.txt  package.xml
src/control_pkg/rddf_recorder/paths/: 2026-2-25_3-43.txt  2026-3-14_11-5.txt  backward.txt  forward.txt  ground.txt  path_plotter.py  sim_test.txt
src/control_pkg/rddf_recorder/paths/no_use/: 1_5_Waypoint_UTM.txt  2025-2-10_21-28.txt  2025-2-13_20-20.txt  2025-2-1_17-26_zz.txt  2025-2-1_17-52_test-walk.txt  2025-2-1_18-39_test-walk.txt  2025-3-11_17-49.txt  2025-3-11_18-23.txt  2025-3-11_18-30.txt  2025-3-13_19-24.txt  2025-3-17_test1.txt  2025-3-17_test2.txt  2025-3-19_20-57.txt  2025-3-19_20-58.txt  2025-3-19_21-17.txt  2025-3-19_22-42.txt  2025-3-26_curve.txt  2025-3-26_straight.txt  2025-4-2_19-38.txt  2025-4-2_20-50.txt  2025-4-30_19-19.txt  2025-5-29_17-58.txt  2025-6-30_12-0.txt  2025-6-30_12-37.txt  2025-6-30_12-40.txt  2025-6-30_15-57.txt  2025-6-4_20-22.txt  2025-6-4_20-32.txt  2025-7-10_13-36.txt  2025-7-7_16-20.txt  2025-7-9_14-15.txt  abcd.txt  forward_rddf.txt
src/control_pkg/rddf_recorder/src/: rddf_recorder.cpp
src/control_pkg/stier_bringup/: CMakeLists.txt
src/drivers/cam/: CMakeLists.txt  package.xml
src/drivers/cam/launch/: cam.launch  cam_daiso.launch  cam_logi.launch
src/drivers/cam/scripts/: kiyo_setup.sh  logi_setup.sh
src/drivers/gps/gps_bringup/: CMakeLists.txt  package.xml
src/drivers/gps/gps_bringup/launch/: gps.launch
src/lidar_pkg/lidar_stack/: README.md
src/lidar_pkg/lidar_stack/src/lidar_interfaces/: CMakeLists.txt  package.xml
src/lidar_pkg/lidar_stack/src/lidar_interfaces/msg/: ObjectInfo.msg
src/lidar_pkg/lidar_stack/src/rrt_path/: CMakeLists.txt
src/lidar_pkg/lidar_stack/src/rrt_path/src/: rrt_dynamic_goal.py
src/lidar_pkg/lidar_stack/src/safety_supervisor/: CMakeLists.txt
src/lidar_pkg/lidar_stack/src/safety_supervisor/cfg/: PredictedPathParameters.cfg  SafetySupervisorParameters.cfg
src/lidar_pkg/lidar_stack/src/safety_supervisor/launch/: safety_supervisor_bringup.launch
src/lidar_pkg/lidar_stack/src/safety_supervisor/src/: path_forecaster.py  predicted_path_visualizer.py  safety_supervisor_node.py
src/vision_pkg/: CMakeLists.txt
src/vision_pkg/cfg/: Vision.cfg
src/vision_pkg/launch/: vision.launch
src/vision_pkg/src/: config.py  config_manager.py  main.py  sliding_window2.py  utils.py
(+69 files in other folders)
