<?xml version="1.0"?>
<package format="2">
  <name>lidar_interfaces</name>
  <version>0.0.0</version>
  <description>Custom LiDAR ROS messages.</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
